# gifter

./: LICENSE  gifter.cabal
src/: Daemon.hs
src/Control/Concurrent/STM/: TEVar.hs
src/Gifter/: Config.hs  Giveaway.hs  GiveawayEntry.hs  Logging.hs  Network.hs  SteamGames.hs  TaggedValue.hs
src/Gifter/Config/: EntryCondition.hs
src/Gifter/Daemon/: Common.hs  ConfigWatcherTask.hs  EnterTask.hs  LastCheckedUrl.hs  PollTask.hs  SteamGamesTask.hs  Task.hs
src/Gifter/Giveaway/: Internal.hs  Parser.hs
src/Gifter/GiveawayEntry/: Internal.hs  Parser.hs
src/Gifter/Parser/: Common.hs
src/Gifter/SteamGames/: Internal.hs  Parser.hs
test/Gifter/: ConfigSpec.hs
test/Gifter/Config/: EntryConditionSpec.hs
test/Gifter/Giveaway/: ParserSpec.hs
test/Gifter/GiveawayEntry/: ParserSpec.hs
test/Gifter/SteamGames/: ParserSpec.hs
test/files/: CogsNoLogin.html  DeadSpaceAlreadyOwn.html  DeadlightNotEnoughPoints.html  DukeNukemOpen.html  FezEntered.html  GiveawayRemoved.html  MedalOfHonorClosed.html  MirrorsEdgeComingSoon.html  RedAlert3Open.html  SteamGames.html  The39StepsContributorsOnly.html  XcomEliteSoldierPackMissingBaseGame.html  config.json  rss.xml
