name: gifter

version: 0.1.0.0

synopsis: Simple program for automatic giveaway entry on steamgifts.com

license: BSD3

license-file: LICENSE

author: Arjan Topolovec

maintainer: arjan.top@gmail.com

build-type: Simple

cabal-version: >= 1.8

executable gifterd
  main-is: Daemon.hs
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -O2
  build-depends:
    base                        >= 4.6,
    xml-conduit                 >= 1.1,
    html-conduit                >= 1.1,
    text                        >= 0.11,
    dom-selector                >= 0.2,
    http-conduit                >= 1.9,
    conduit                     >= 1.0,
    system-filepath             >= 0.4,
    resourcet                   >= 0.4,
    xml-types                   >= 0.3,
    bytestring                  >= 0.10,
    cmdargs                     >= 0.10,
    network                     >= 2.4,
    time                        >= 1.4,
    transformers                >= 0.3,
    safe                        >= 0.3,
    filepath                    >= 1.3,
    directory                   >= 1.2,
    async                       >= 2.0,
    stm                         >= 2.4,
    old-locale                  >= 1.0,
    aeson                       >= 0.6,
    regex-posix                 >= 0.95,
    unordered-containers        >= 0.2
  
test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Spec.hs
  ghc-options: -Wall -Werror -fno-warn-unused-do-bind
  build-depends:
    base                        >= 4.6,
    text                        >= 0.11,
    conduit                     >= 1.0,
    dom-selector                >= 0.2,
    xml-conduit                 >= 1.1,
    html-conduit                >= 1.1,
    http-conduit                >= 1.9,
    system-filepath             >= 0.4,
    resourcet                   >= 0.4,
    xml-types                   >= 0.3,
    bytestring                  >= 0.10,
    network                     >= 2.4,
    time                        >= 1.4,
    safe                        >= 0.3,
    filepath                    >= 1.3,
    directory                   >= 1.2,
    aeson                       >= 0.6,
    hspec                       >= 1.7,
    regex-posix                 >= 0.95,
    unordered-containers        >= 0.2
